--- a/index.qmd
+++ b/index.qmd
@@ -21,13 +21,13 @@ In the early 2000s, Portugal's education was falling behind the rest of Europe, 
 
 In order to analyze which factors are most predictive of student success in Gabriel Pereira and Mousinho da Silveira, the dataset edu_achievement, was used, which contains information on the students' background factors and academic performance. The outcome variable, G3, represents the students' final grade. 
 
-The following variables were explored: number of past class failures, alcohol consumption during weekdays and the weekend, study time, internet access, health status, family relationship strength, mother and father education level, extra paid classes, and free time. To visualize the relationship between internet access and G3, a bar graph was used to compare students with and without internet access. For health status, a scatter plot with a fitted linear regression line was used. Similarly, a scatter plot was also used for family relationship strength. 
+The following 12 variables were explored: interest in higher education, number of past class failures, alcohol consumption during weekdays and the weekend, study time, internet access, health status, family relationship strength, mother and father education level, extra paid classes, and free time. To visualize the relationship between internet access and G3, a bar graph was used to compare students with and without internet access. For health status, a scatter plot with a fitted linear regression line was used. Similarly, a scatter plot was also used for family relationship strength. 
 
 
 
 ## Analysis
 
- Students with internet access had a higher mean final grade (10.6) and median grade (11) than those without access (mean = 9.41, median = 10), suggesting that access to online resources may improve academic performance, by increasing accessibility to resources and supplemental practice.
+Students with internet access had a higher mean final grade (10.6) and median grade (11) than those without access (mean = 9.41, median = 10), suggesting that access to online resources may improve academic performance, by increasing accessibility to resources and supplemental practice.
 
 For health status, the mean final grade slightly increased from 10.0 at health = 3 to 10.4 at health = 5. Similarly, the median indicated that students who reported better health tended to perform slightly better academically. A linear regression confirmed a weak but positive association between health and final grades.
 
@@ -35,18 +35,12 @@ Gor family relationship strength (famrel), mean grades ranged from 9.89 to 10.8,
 
 ## Discussion
 
-Conclusions:
-- Largest indicators of success (based on final grade) were interest in higher education, low class failures, and low alcohol consumption
-- Surprisingly, extra paid classes in the subject and amount of free time seemed to have little correlation to final grade
-- The results indicate that people's presumptions of which factors influence math performance the most might be misguided
+Our analysis suggests that the strongest indicators of student success, as measured by final math grades, were interest in pursuing higher education and a low number of past class failures. Students who expressed their intention of continuing their education beyond secondary school tended to achieve higher grades, possibly reflecting greater academic motivation and a high level of long-term planning. On the other hand, students with a history of course failures were more likely perform poorly, which could indicate underlying struggles such as poor studying strategies or procrastination.
 
-Applications:
-- Areas of focus for highest return
-- Delegate more resources to strongest influences
+Interestingly, some factors that might be presumed to have a strong effect on math performance, such as participation in paid extra classes and amount of alcohol consumption, showed little to no correlation with final grades. These findings suggest that traditional methods for improving educational performance, such as supplementary instruction and alcohol awareness programs, may not hold in all educational contexts and that student motivation and performance history may be far more influential than access to additional academic resources alone. People should exercise caution when making presumptions about which factors most strongly influence academic achievement because they can be misguiding, and 
 
-Limitations:
-- The data we analyzed were limited to math performance and only secondary education of two Portuguese schools. This reduces the generalizability of our conclusions.
-- Questionnaires might not reflect full truth
-- Final grade (G3) does not entirely explain student success
-- Weren't able to fully explore the interaction of variables
-- Weren't able to deeply analyze why certain variables have an influence on math performance
+The results offer a number of implications for educators and policymakers. Attempts to boost interest in pursuing higher education could exhibit substantial improvements in student performance. Some examples include raising awareness of the benefits to continuing education, reorienting school curricula to encourage academic exploration and the discovery of academic passions, or rewarding academic achievement. Additionally, schools might consider developing support programs that targets students with a history of class failures. These programs could, for instance, offer students accountability and help students build or regain confidence. By investing resources that address the strongest factors for educational performance, identified as interest in higher education and the number of past class failures, educational institutions can achieve the highest return on intervention efforts.
+
+While our analysis provides meaningful insights, it is important to recognize its limitations. The data we analyzed were limited to math performance among secondary students in two Portuguese schools during the 2005-2006 school year, which reduces the generalizability of our conclusions to other subjects, regions, and educational systems. Furthermore, the data were collected through self-reported questionnaires, which may not fully capture students’ true behaviors, attitudes, or study habits.
+
+Additionally, the final grade (G3) metric represents only one dimension of academic success and may not encompass other important outcomes such as problem-solving ability or critical thinking. Our models also did not fully account for interactions between variables, such as how parental education and school support might jointly influence performance. Since our data are correlational, we cannot infer causation from our analysis. Branching off, our analysis did not examine whether interest in pursuing a higher education enhances academic performance or that interest is a result of high academic performance.
