--- a/index.qmd
+++ b/index.qmd
@@ -35,12 +35,12 @@ Gor family relationship strength (famrel), mean grades ranged from 9.89 to 10.8,
 
 ## Discussion
 
-Our analysis suggests that the strongest indicators of student success, as measured by final math grades, were interest in pursuing higher education and a low number of past class failures. Students who expressed their intention of continuing their education beyond secondary school tended to achieve higher grades, possibly reflecting greater academic motivation and a high level of long-term planning. On the other hand, students with a history of course failures were more likely perform poorly, which could indicate underlying struggles such as poor studying strategies or procrastination.
+Our analysis suggests that the strongest indicators of student success, as measured by final math grades, were interest in pursuing higher education and a low number of past class failures. Students who expressed their intention of continuing their education beyond secondary school tended to achieve higher grades, possibly reflecting greater academic motivation and a high level of long-term planning. On the other hand, students with a history of course failures tended to perform worse, which could indicate underlying struggles such as poor studying strategies or procrastination.
 
-Interestingly, some factors that might be presumed to have a strong effect on math performance, such as participation in paid extra classes and amount of alcohol consumption, showed little to no correlation with final grades. These findings suggest that traditional methods for improving educational performance, such as supplementary instruction and alcohol awareness programs, may not hold in all educational contexts and that student motivation and performance history may be far more influential than access to additional academic resources alone. People should exercise caution when making presumptions about which factors most strongly influence academic achievement because they can be misguiding, and 
+Interestingly, some factors that might be presumed to have a strong effect on math performance, such as participation in paid extra classes and the amount of alcohol consumption, showed little to no correlation with final grades. These findings suggest that traditional methods for improving educational performance, such as supplementary instruction and alcohol awareness programs, may not apply to all educational contexts and that student motivation and performance history may be far more influential than access to additional academic resources alone. People should exercise caution when making presumptions about which factors most strongly influence academic achievement because they can be misguiding.
 
-The results offer a number of implications for educators and policymakers. Attempts to boost interest in pursuing higher education could exhibit substantial improvements in student performance. Some examples include raising awareness of the benefits to continuing education, reorienting school curricula to encourage academic exploration and the discovery of academic passions, or rewarding academic achievement. Additionally, schools might consider developing support programs that targets students with a history of class failures. These programs could, for instance, offer students accountability and help students build or regain confidence. By investing resources that address the strongest factors for educational performance, identified as interest in higher education and the number of past class failures, educational institutions can achieve the highest return on intervention efforts.
+The results offer a number of applications for educators and policymakers. Attempts to boost interest in pursuing higher education could exhibit substantial improvements in student performance. Some examples include raising awareness of the benefits to continuing education, reorienting school curricula to encourage academic exploration and the discovery of academic passions, or rewarding academic achievement. Additionally, schools might consider developing support programs that target students with a history of class failures. These programs could, for instance, offer students accountability and help them build or regain confidence. By investing resources that address the strongest factors for educational performance, identified as interest in higher education and the number of past class failures, educational institutions can achieve the highest return on intervention measures.
 
-While our analysis provides meaningful insights, it is important to recognize its limitations. The data we analyzed were limited to math performance among secondary students in two Portuguese schools during the 2005-2006 school year, which reduces the generalizability of our conclusions to other subjects, regions, and educational systems. Furthermore, the data were collected through self-reported questionnaires, which may not fully capture students’ true behaviors, attitudes, or study habits.
+While our analysis provides meaningful insights, limitations naturally arise. The data we analyzed were limited to math performance among secondary students in two Portuguese schools during the 2005-2006 school year, which reduces the generalizability of our conclusions to other subjects, regions, and educational systems. Furthermore, the data were collected through self-reported questionnaires, which may not fully capture students’ true behaviors, attitudes, or study habits.
 
-Additionally, the final grade (G3) metric represents only one dimension of academic success and may not encompass other important outcomes such as problem-solving ability or critical thinking. Our models also did not fully account for interactions between variables, such as how parental education and school support might jointly influence performance. Since our data are correlational, we cannot infer causation from our analysis. Branching off, our analysis did not examine whether interest in pursuing a higher education enhances academic performance or that interest is a result of high academic performance.
+Additionally, the final grade (G3) metric may not account for other important outcomes such as problem-solving or critical thinking skills. Additionally, our analysis did not fully consider the interactions between variables, such as how parental education and school support might jointly influence performance. Since our data are correlational, we cannot infer causation from our analysis. Branching off from that idea, our analysis did not examine whether interest in pursuing a higher education enhances academic performance or whether interest is a result of high academic performance.
